Various spelling corrections

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 		<div id="columnLeft"> <p> 
 			
 			<h4>Bio</h4>
-			Born and Raised in Atlanta, I studied Interactive Design at Kennesaw State University. I grew up with a love of cars and have spent the last 6 years in the auto industry while studing in school. This has lead to me having and extensive background in sales and adult learning and training to pair well with my graphic and interactive design skills.  
+			Born and raised in Atlanta, GA, I studied Interactive Design at Kennesaw State University. I grew up with a love of cars and have spent the last 6 years in the automotive industry while earning my Bachelors Degree. This has led to me having and extensive background in Sales, Adult Learning, and Training to pair well with my Graphic and Interactive Design skills.  
 			<p>
 				<br>
 			<h4> Achivements </h4>
-				2017/2018 - President's List<br><br>
-				2017 - 1st Place in BMW video compitition<br><br>
-				2016 - Top Editor in BMW Genius app<br><br>
+				2017/2018 - President's List, Kennesaw State University<br><br>
+				2017 - 1st Place in BMW Video Competition<br><br>
+				2016 - Top Editor in BMW Genius App<br><br>
 			</p>
 			</p> </div>
 		<div id="columnRight">
@@ -105,9 +105,8 @@
 			 </p></div>
 			
 		<div id="rowBottom">
-			<h4>Hobbies and Intrests</h4>
-		<p>I am car fanatic and the outdoors are my life.</p>
-		<p> I have been taking photos for the past few years as a hobby and really enjoy it. I have also dabled with filming as well. </p>
+			<h4>Hobbies and Interests</h4>
+		<p>I enjoy hiking, biking, and exploring the great outdoors. I am an amateur photographer and have recently begun incorporating my own media into my designs. </p>
 		</div>
 		
 		</div>
