--- a/Fitlock.html
+++ b/Fitlock.html
@@ -63,7 +63,7 @@
 		<div id="columnLeft"> <p> 
 			
 			<h4>Intro</h4>
-          <p>June 2018 - While taking an interactive Design class we created this assignment during a one-week sprint. The goal was to create an app, presentation and PDF and then iterate on it after conducting user testing to make the app more focused on goal-oriented design. It took hard work and determination to get the project done by the deadline but it turned about amazing. </p>
+          <p>June 2018 - While taking an Interactive Design class at Kennesaw State University, my team  and I created this project during a one-week sprint. The goal was to create an app, presentation, and PDF and then iterate on it after conducting user testing, to make the app more focused on goal-oriented design. As the team lead and lead designer, I put in hard work and a clear vision to get the project done by the deadline, but it turned about amazing. </p>
           <p>*User group was based on class demograpic.</p>
 			
 			<h4>What is FitLock</h4>
@@ -82,7 +82,7 @@
           <br>
 			</p>
 			</p>
-			 </div>
+		  </div>
 		<div id="columnRight">
 			
 		
