--- a/Logo.html
+++ b/Logo.html
@@ -63,14 +63,14 @@
 		<div id="columnLeft"> 
 			
 		  <h4>Intro</h4>
-		  <p>The goal was to try some new design techniques and create a unique and personal logo. I used a combonation of Photoshop, Illustrator and After Effects to achive the final results and along the way learned new and faster techniques to go through the low to high fidelity process of creating a logo. </p>
+		  <p>The goal was to familiarize myself with new design techniques through the creation of a unique and personal logo. I used a combonation of Photoshop, Illustrator and After Effects to achive the final results and along the way learned new and faster techniques to go through the low to high fidelity process of creating a logo. </p>
 		  <p>&nbsp;</p>
 		  <p>&nbsp;</p>
 		  <p>&nbsp;</p>
 		  
 		  <strong>Steps</strong>
-		  <p>1. first thing was creating an idea. I wanted to combine the two letters of my name to form a final big B. I used sketches and Photoshop to roughout the plan as seen in the low fidelity. </p>
-		  <p>2. I experimented more with stroke and came up with an a design that felt good in photoshop. I showed this idea to colleagues to gauge their thoughts used some of thier suggestions in the revised version to create the high fidelity design.</p>
+		  <p>1. First thing was creating an idea. I wanted to combine the two letters of my name to form a final big B. I used sketches and Photoshop to roughout the plan, as seen in the low fidelity sketch. </p>
+		  <p>2. I experimented more with stroke and came up with a design that felt good in Photoshop. I showed this idea to colleagues to gauge their thoughts, and used some of thier suggestions in the revised version to create the high fidelity design.</p>
 		  <p>3.  I took the design into Illustrator and created a path using various tools so that I could scale the stroke and make adjustments as needed. </p>
 		  <p>4. Using the path I created, I split it up into two parts per letter and imported it into After Effects. I experimented around to achive the effect I was going for and settled on trim paths to follow the path at specific keypaths. </p>
 		  <p>5. Various minor adjustments and I have the final After Effects image which is perfect for video intros.</p>
