Various spelling and minor link formating

--- a/Logo.html
+++ b/Logo.html
@@ -71,9 +71,9 @@
 		  <strong>Steps</strong>
 		  <p>1. First thing was creating an idea. I wanted to combine the two letters of my name to form a final big B. I used sketches and Photoshop to roughout the plan, as seen in the low fidelity sketch. </p>
 		  <p>2. I experimented more with stroke and came up with a design that felt good in Photoshop. I showed this idea to colleagues to gauge their thoughts, and used some of thier suggestions in the revised version to create the high fidelity design.</p>
-		  <p>3.  I took the design into Illustrator and created a path using various tools so that I could scale the stroke and make adjustments as needed. </p>
+		  <p>3.  I took the design into Illustrator and created a path, so I could scale the stroke and make adjustments as needed. </p>
 		  <p>4. Using the path I created, I split it up into two parts per letter and imported it into After Effects. I experimented around to achive the effect I was going for and settled on trim paths to follow the path at specific keypaths. </p>
-		  <p>5. Various minor adjustments and I have the final After Effects image which is perfect for video intros.</p>
+		  <p>5. After various minor adjustments, I have the final After Effects image which is perfect for video intros.</p>
 			  <br>
 		  <p><img src="assets/pb.gif" width="558" height="324" alt=""/></p><br>
 			
