--- a/Fitlock.html
+++ b/Fitlock.html
@@ -91,7 +91,7 @@
 		  <div id="files">
 			<h2>Files</h2>
 			  <h4><a href="https://www.dropbox.com/s/khxydrfpn6pjj4x/Fitlock%20PDF3.pdf?dl=0" target="blank">PDF</a></h4>
-			<h4><a href="https://www.dropbox.com/s/ye41psgti11ky97/FitLock%20Presentation%28T%29.pptx?dl=0" title="1st Presentation" target="_blank">1st Presentation</a></h4>
+			<h4><a href="https://www.dropbox.com/s/ye41psgti11ky97/FitLock%20Presentation%28T%29.pptx?dl=0" title="1st Presentation" target="_blank">Intial Presentation</a></h4>
 			
 		  <h4><a href="https://www.dropbox.com/s/o1eg2sl99uui308/Presentation%20V1.1.pptx?dl=0" target="blank">Revised Presentation</a></h4>
 			<h4><a href="https://xd.adobe.com/view/5577451e-7f4c-4a81-5777-05c6b33b40c3-2346/" target="blank">Navigatable Prototype</a></h4>
