--- a/Fitlock.html
+++ b/Fitlock.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 	
-<title>Parker Bomar - About Me</title>
+<title>Parker Bomar - FitLock</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
