--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="hero-text">
     <h1>I am Parker Bomar</h1>
 	  <p><img src="assets/anchor.png" width="23" height="24" alt=""/><br>Atlanta, GA<br>
-	  404-567-0392 <br> parker@pbomar.com</p>
+	  404-567-0392 <br> <a href="mailto:parker@pbomar.com">Parker@Pbomar.com</a></p>
     
   </div>
 </div>
