updated row bottom

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 		<div id="maincontent">
 		<div id="columnLeft"> <p> 
 			
-			<h4>Bio</h4>
+			<h3>Bio</h3>
 			Born and raised in Atlanta, GA, I studied Interactive Design at Kennesaw State University. I grew up with a love of cars and have spent the last 6 years in the automotive industry while earning my Bachelors Degree. This has led to me having and extensive background in Sales, Adult Learning, and Training to pair well with my Graphic and Interactive Design skills.  
 			<p>
 				<br>
-			<h4> Achivements </h4>
+			<h3> Achivements </h3>
 				2017/2018 - President's List, Kennesaw State University<br><br>
 				2017 - 1st Place in BMW Video Competition<br><br>
 				2016 - Top Editor in BMW Genius App<br><br>
@@ -73,7 +73,7 @@
 		<div id="columnRight">
 			
 			<p>
-				<h4>Skills</h4>
+				<h3>Skills</h3>
 				<ul>
 					<li>Interactive Design</li>
 				
@@ -83,7 +83,7 @@
 					<li>Photography</li>
 			</ul>
 					<br>
-				<b>Proficent Software </b> 
+				<h3>Proficent Software </h3> 
 					<ul>
 					<li>Photoshop</li>
 					<li>XD</li>
@@ -95,7 +95,7 @@
 					</ul>
 					
 					<br>
-					<b>Launguges</b>
+			<h3>Launguges</h3>
 					<ul>
 					<li>C#</li>
 					<li>HTML and CSS</li>
@@ -105,10 +105,12 @@
 			 </p></div>
 			
 		<div id="rowBottom">
-			<h4>Hobbies and Interests</h4>
+			<h3>Hobbies and Interests</h3>
 		<p>I enjoy hiking, biking, and exploring the great outdoors. I am an amateur photographer and have recently begun incorporating my own media into my designs. </p>
 		</div>
-		
+		<div id="rowBottom1">
+			<p>Parker Bomar - 2018</p>
+		</div>
 		</div>
 		</main>
 		
