--- a/Logo.html
+++ b/Logo.html
@@ -62,13 +62,13 @@
 	  <div id="maincontent">
 		<div id="columnLeft"> 
 			
-		  <h4>Intro</h4>
+		  <h3>Intro</h3>
 		  <p>The goal was to familiarize myself with new design techniques through the creation of a unique and personal logo. I used a combonation of Photoshop, Illustrator and After Effects to achive the final results and along the way learned new and faster techniques to go through the low to high fidelity process of creating a logo. </p>
 		  <p>&nbsp;</p>
 		  <p>&nbsp;</p>
 		  <p>&nbsp;</p>
 		  
-		  <strong>Steps</strong>
+			<h3>Steps</h3>
 		  <p>1. First thing was creating an idea. I wanted to combine the two letters of my name to form a final big B. I used sketches and Photoshop to roughout the plan, as seen in the low fidelity sketch. </p>
 		  <p>2. I experimented more with stroke and came up with a design that felt good in Photoshop. I showed this idea to colleagues to gauge their thoughts, and used some of thier suggestions in the revised version to create the high fidelity design.</p>
 		  <p>3.  I took the design into Illustrator and created a path, so I could scale the stroke and make adjustments as needed. </p>
