--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					</ul>
 					
 					<br>
-			<h3>Launguges</h3>
+			<h3>Languages</h3>
 					<ul>
 					<li>C#</li>
 					<li>HTML and CSS</li>
