--- a/Portfolio.html
+++ b/Portfolio.html
@@ -35,10 +35,10 @@
 		
 		
 		<div id="hoverimg3">
-		<a href="VillageBurger/index.html" target="blank">
+		<a href="VB redesign/index.html" target="blank">
 			<div class="hero4-image">
   			<div class="hero4-text">
-				<img src="VillageBurger/assets/VBlogowhite.png" width="151" height="151" alt=""/>
+				<img src="VB redesign/assets/VBlogowhite.png" width="151" height="151" alt=""/>
 			<h1 style="font-size:50px">Village Burger</h1>
     		<p>Website and Brand Redesign</p>
 				</div> </div> </div> </a>
