--- a/VBredesign/index.html
+++ b/VBredesign/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Village Burger</title>
-<link href="stylesheets/index_style.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="VBredesign/stylesheets/index_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -14,11 +14,11 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><img src="Assets/VBlogowhite.png" width="60" height="" alt=""/></li>	
-  <li><a href="menu.html">Menu</a></li>
-  <li><a href="locations.html">Locations</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="contact.html">Contact</a></li>		
+<li><img src="VBredesign/Assets/VBlogowhite.png" width="60" height="" alt=""/></li>	
+  <li><a href="VBredesign/menu.html">Menu</a></li>
+  <li><a href="VBredesign/locations.html">Locations</a></li>
+  <li><a href="VBredesign/about.html">About</a></li>
+  <li><a href="VBredesign/contact.html">Contact</a></li>		
 		<li><a href="https://www.doordash.com/store/village-burger-tucker-240118/" target="_blank"><button class="button">Order Online</button></a></li>
 		
 </ul>
@@ -26,9 +26,9 @@
 	<div class="bellownav"></div>
 	<!-- Video-->
 <div class="video-container">
-	  <video autoplay loop muted poster="Assets/burger.jpg">
+	  <video autoplay loop muted poster="VBredesign/assets/burger.jpg">
 
-<source src="Assets/burger.mp4" type="video/mp4"/>
+<source src="VBredesign/Assets/burger.mp4" type="video/mp4"/>
 		    Your browser does not support the video
 	</video>
 
