hope this works

--- a/VBredesign/index.html
+++ b/VBredesign/index.html
@@ -14,7 +14,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><img src="Assets/VBlogowhite.png" width="60" height="" alt=""/></li>	
+<li><img src="assets/VBlogowhite.png" width="60" height="" alt=""/></li>	
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
   <li><a href="about.html">About</a></li>
@@ -26,9 +26,9 @@
 	<div class="bellownav"></div>
 	<!-- Video-->
 <div class="video-container">
-	  <video autoplay loop muted poster="Assets/burger.jpg">
+	  <video autoplay loop muted poster="assets/burger.jpg">
 
-<source src="Assets/burger.mp4" type="video/mp4"/>
+<source src="assets/burger.mp4" type="video/mp4"/>
 		    Your browser does not support the video
 	</video>
 
