--- a/VBredesign/contact.html
+++ b/VBredesign/contact.html
@@ -14,7 +14,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><a class="image" href="index.html"><img src="Assets/VBlogo.png" width="60" height="" alt=""/></a></li>	
+<li><a class="image" href="index.html"><img src="assets/VBlogo.png" width="60" height="" alt=""/></a></li>	
   <li><a href="menu.html">Menu</a></li>
   <li><a  href="locations.html">Locations</a></li>
   <li><a  href="about.html">About</a></li>
