Resume opens new tab

--- a/Logo.html
+++ b/Logo.html
@@ -28,7 +28,7 @@
   <ul>
 	  <li><a href="index.html">ABOUT</a></li>  
 	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf">RESUME</a></li>
+	<li> <a href="RESUME.pdf" target="blank">RESUME</a></li>
 	   <li> <a class="current" >LOGO&nbsp;DESIGN</a></li>
 		
   </ul>
