--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <ul>
 	  <li><a class="current">ABOUT</a></li>  
 	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf">RESUME</a></li>
+	<li> <a href="RESUME.pdf"  target="blank">RESUME</a></li>
 	
   </ul>
 	  <br>
