--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,7 +66,7 @@
   <ul>
 	 <li> <a href="index.html">ABOUT</a></li>  
 	<li> <a class="current">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf">RESUME</a></li>
+	<li> <a href="RESUME.pdf" target="blank">RESUME</a></li>
 		
   </ul>
 	  <br>
