Fixed footer to bottom of page

--- a/VBredesign/index.html
+++ b/VBredesign/index.html
@@ -14,7 +14,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><img src="assets/VBlogowhite.png" width="60" height="" alt=""/></li>	
+<li><a class="image" href="index.html"><img src="assets/VBlogowhite.png" width="60" height="" alt=""/></a></li> 
   <li><a href="menu.html">Menu</a></li>
   <li><a href="locations.html">Locations</a></li>
   <li><a href="about.html">About</a></li>
