social media links updated

--- a/VBredesign/contact.html
+++ b/VBredesign/contact.html
@@ -63,12 +63,14 @@
 		
 </div>
 	 
-		<a href="https://www.facebook.com/VillageBurger" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; color:white;"></i></a> 
-	  &nbsp
-	  	<i class="fa fa-instagram" style="font-size:30px; color:white;"></i>
-	  &nbsp
-		<i class="fa fa-twitter-square" style="font-size:30px; color:white;"></i>
 	
+		
+	 	<a href="https://www.facebook.com/VillageBurger" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; color:white;"></i></a> 
+	  &nbsp
+	  	<a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram" style="font-size:30px; color:white;"></i></a>
+	  &nbsp
+		<a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" style="font-size:30px; color:white;"></i></a>
+	 
   </section>
 
 
