--- a/VBredesign/locations.html
+++ b/VBredesign/locations.html
@@ -78,11 +78,14 @@
 		
 </div>
 			 <div class="centered">			
-		<a href="https://www.facebook.com/VillageBurger" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; color:white;"></i></a> 
+		
+		
+	 	<a href="https://www.facebook.com/VillageBurger" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px; color:white;"></i></a> 
 	  &nbsp
-	  	<i class="fa fa-instagram" style="font-size:30px; color:white;"></i>
+	  	<a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram" style="font-size:30px; color:white;"></i></a>
 	  &nbsp
-		<i class="fa fa-twitter-square" style="font-size:30px; color:white;"></i>
+		<a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter-square" style="font-size:30px; color:white;"></i></a>
+	  
 	</div>
   </section>
 	
