--- a/Logo.html
+++ b/Logo.html
@@ -9,13 +9,39 @@
 </head>
 
 <body>
+	
+	<div class="sidesideside">  
+	<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<a class="current">ABOUT</a>
+	 <a href="Portfolio.html">PORTFOLIO</a>
+	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+</div>
+
+
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+    document.body.style.backgroundColor = "white";
+}
+</script>
+	
+		</div>
 	<div id="shell">
 		
-	 
-		
-	
-		
-		<div id="leftnav">
+
+		<div class="mobile_hide">
+		<div id="leftnav" class="mobilehide">
 	  <div id="sidenav">
 			<h1><img src="assets/PBlogo.png" width="155" height="183" alt=""/></h1>
 			<h1>Parker Bomar</h1>
@@ -26,11 +52,10 @@
 	
 <nav>
   <ul>
-	  <li><a href="index.html">ABOUT</a></li>  
+	  <li><a class="current">ABOUT</a></li>  
 	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf" target="blank">RESUME</a></li>
-	   <li> <a class="current" >LOGO&nbsp;DESIGN</a></li>
-		
+	<li> <a href="RESUME.pdf"  target="blank">RESUME</a></li>
+	
   </ul>
 	  <br>
 	
@@ -44,14 +69,15 @@
 
 	
 </nav>
+			</div>
 	</div>
 	
-		
+		<div class="maintest">	
 	<main>
 		
 		<div class="hero2-image">
   <div class="hero2-text">
-     <img src="assets/PBlogo1.png" width="131" height="151" alt=""/>
+     <img src="assets/PBlogo1.png" width="100" alt=""/>
 			<h1 style="font-size:50px">Logo Design</h1>
     		<p>Low to High Fidelity</p>
 				
@@ -96,7 +122,7 @@
 		
 		</div>
 		</main>
-		
+		</div>
 		
 </div>
 </body>
