--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,51 +9,39 @@
 </head>
 
 <body>
+	
+	<div class="sidesideside">  
+	<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<a class="current">ABOUT</a>
+	 <a href="Portfolio.html">PORTFOLIO</a>
+	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+</div>
+
+
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+    document.body.style.backgroundColor = "white";
+}
+</script>
+	
+		</div>
 	<div id="shell">
 		
-	  
-	
-	<main>
-		<div id="hoverimg">
-		<a href="Fitlock.html">
-			<div class="hero1-image">
- 			 <div class="hero1-text">
-	  		<img src="assets/fitlocklogo.png" width="151" height="151" alt=""/>
-			<h1 style="font-size:50px">FITLOCK</h1>
-   			 <p>Prototype - PDF - Presentation</p>
-				</div> </div> </div> </a>
-				
-				<div id="hoverimg1">
-		<a href="Logo.html">
-			<div class="hero2-image">
-  			<div class="hero2-text">
-	 		 <img src="assets/PBlogo1.png" width="131" height="151" alt=""/>
-			<h1 style="font-size:50px">Logo Design</h1>
-    		<p>Low to High Fidelity</p>
-   			</div> </div> </div></a>
-		
-		
-		
-		<div id="hoverimg3">
-		<a href="VBredesign/index.html" target="blank">
-			<div class="hero4-image">
-  			<div class="hero4-text">
-				<img src="VBredesign/assets/VBlogowhite.png" width="151" height="151" alt=""/>
-			<h1 style="font-size:50px">Village Burger</h1>
-    		<p>Website and Brand Redesign</p>
-				</div> </div> </div> </a>
-		
-		<div id="hoverimg2">
-		<a href="https://www.instagram.com/parkerbomar" target="blank">
-			<div class="hero3-image">
-  			<div class="hero3-text">
-			<h1 style="font-size:50px">Photography</h1>
-    		<p>Automotive and Travel</p>
-				</div> </div> </div> </a>
-		
-	  </main>
-		
-		<div id="leftnav">
+
+		<div class="mobile_hide">
+		<div id="leftnav" class="mobilehide">
 	  <div id="sidenav">
 			<h1><img src="assets/PBlogo.png" width="155" height="183" alt=""/></h1>
 			<h1>Parker Bomar</h1>
@@ -64,10 +52,10 @@
 	
 <nav>
   <ul>
-	 <li> <a href="index.html">ABOUT</a></li>  
-	<li> <a class="current">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf" target="blank">RESUME</a></li>
-		
+	  <li><a class="current">ABOUT</a></li>  
+	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
+	<li> <a href="RESUME.pdf"  target="blank">RESUME</a></li>
+	
   </ul>
 	  <br>
 	
@@ -81,8 +69,53 @@
 
 	
 </nav>
+			</div>
 	</div>
 	
+		<div class="maintest">	
+	
+	<main>
+		<div id="hoverimg">
+		<a href="Fitlock.html">
+			<div class="hero1-image">
+ 			 <div class="hero1-text">
+	  		<img src="assets/fitlocklogo.png" width="100"  alt=""/>
+			<h1 style="font-size:50px">FITLOCK</h1>
+   			 <p>Prototype - PDF - Presentation</p>
+				</div> </div> </div> </a>
+				
+				<div id="hoverimg1">
+		<a href="Logo.html">
+			<div class="hero2-image">
+  			<div class="hero2-text">
+	 		 <img src="assets/PBlogo1.png" width="100" alt=""/>
+			<h1 style="font-size:50px">Logo Design</h1>
+    		<p>Low to High Fidelity</p>
+   			</div> </div> </div></a>
+		
+		
+		
+		<div id="hoverimg3">
+		<a href="VBredesign/index.html" target="blank">
+			<div class="hero4-image">
+  			<div class="hero4-text">
+				<img src="VBredesign/assets/VBlogowhite.png" width="100"  alt=""/>
+			<h1 style="font-size:50px">Village Burger</h1>
+    		<p>Website and Brand Redesign</p>
+				</div> </div> </div> </a>
+		
+		<div id="hoverimg2">
+		<a href="https://www.instagram.com/parkerbomar" target="blank">
+			<div class="hero3-image">
+  			<div class="hero3-text">
+			<h1 style="font-size:50px">Photography</h1>
+    		<p>Automotive and Travel</p>
+				</div> </div> </div> </a>
+		
+	  </main>
+		</div>
+		
+		
 	
 </div>
 </body>
