--- a/index.html
+++ b/index.html
@@ -2,20 +2,46 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Parker Bomar - About Me</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+	
+	<div class="sidesideside">  
+	<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+<a class="current">ABOUT</a>
+	 <a href="Portfolio.html">PORTFOLIO</a>
+	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+</div>
+
+
+<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+
+<script>
+function openNav() {
+    document.getElementById("mySidenav").style.width = "250px";
+    document.getElementById("main").style.marginLeft = "250px";
+    document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
+}
+
+/* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
+function closeNav() {
+    document.getElementById("mySidenav").style.width = "0";
+    document.getElementById("main").style.marginLeft = "0";
+    document.body.style.backgroundColor = "white";
+}
+</script>
+	
+		</div>
 	<div id="shell">
 		
-	 
-		
-	
-		
-		<div id="leftnav">
+
+		<div class="mobile_hide">
+		<div id="leftnav" class="mobilehide">
 	  <div id="sidenav">
 			<h1><img src="assets/PBlogo.png" width="155" height="183" alt=""/></h1>
 			<h1>Parker Bomar</h1>
@@ -43,9 +69,10 @@
 
 	
 </nav>
+			</div>
 	</div>
 	
-		
+		<div class="maintest">	
 	<main>
 		
 		<div class="hero-image">
@@ -113,7 +140,7 @@
 		</div>
 		</div>
 		</main>
-		
+		</div>
 		
 </div>
 </body>
