--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <a class="current">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
 	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+			<br>
+		<a href="https://www.linkedin.com/in/pbomar"  target="blank">LINKEDIN</a>
+		<a href="https://www.instagram.com/parkerbomar"  target="blank">INSTAGRAM</a>
 </div>
 
 
