--- a/Logo.html
+++ b/Logo.html
@@ -13,9 +13,12 @@
 	<div class="sidesideside">  
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-<a class="current">ABOUT</a>
+<a href="index.html">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
 	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+			<br>
+		<a href="https://www.linkedin.com/in/pbomar"  target="blank">LINKEDIN</a>
+		<a href="https://www.instagram.com/parkerbomar"  target="blank">INSTAGRAM</a>
 </div>
 
 
