--- a/Portfolio.html
+++ b/Portfolio.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Parker Bomar - Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
@@ -15,10 +16,10 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 <a href="index.html">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
-	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+	 <a href="RESUME.pdf"  target="_blank">RESUME</a>
 		<br>
-		<a href="https://www.linkedin.com/in/pbomar"  target="blank">LINKEDIN</a>
-		<a href="https://www.instagram.com/parkerbomar"  target="blank">INSTAGRAM</a>
+		<a href="https://www.linkedin.com/in/pbomar"  target="_blank">LINKEDIN</a>
+		<a href="https://www.instagram.com/parkerbomar"  target="_blank">INSTAGRAM</a>
 </div>
 
 
@@ -55,19 +56,19 @@ function closeNav() {
 	
 <nav>
   <ul>
-	  <li><a class="current">ABOUT</a></li>  
-	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf"  target="blank">RESUME</a></li>
+	  <li><a href="index.html">ABOUT</a></li>  
+	<li> <a href="Portfolio.html" class="current">PORTFOLIO</a></li> 
+	<li> <a href="RESUME.pdf"  target="_blank">RESUME</a></li>
 	
   </ul>
 	  <br>
 	
 	<div id="social">
 		
-		<a href="https://www.instagram.com/parkerbomar" target="blank"><img src="assets/insta.png" width="44" height="44" alt="@parkerbomar - Instagram" align = "center"/></a>
-		<a href="https://www.behance.net/parkerbomar" target="blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
-		<a href="https://dribbble.com/parkerbomar" target="blank"><img src="assets/dribble.png" width="42" height="42" alt="behance" align = "center"/></a>
-		<a href="https://www.linkedin.com/in/pbomar" target="blank"><img src="assets/linkedin.png" width="42" height="42" alt="Linked-in" align = "center"/></a>
+		<a href="https://www.instagram.com/parkerbomar" target="_blank"><img src="assets/insta.png" width="44" height="44" alt="@parkerbomar - Instagram" align = "center"/></a>
+		<a href="https://www.behance.net/parkerbomar" target="_blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
+		<a href="https://dribbble.com/parkerbomar" target="_blank"><img src="assets/dribble.png" width="42" height="42" alt="behance" align = "center"/></a>
+		<a href="https://www.linkedin.com/in/pbomar" target="_blank"><img src="assets/linkedin.png" width="42" height="42" alt="Linked-in" align = "center"/></a>
 	</div>
 
 	
