--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 	
 	<div class="sidesideside">  
 	<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="javascript:void(0)" class="closebtn disabled" onclick="closeNav()">&times;</a>
 <a class="current">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
-	 <a href="RESUME.pdf"  target="blank">RESUME</a>
+	 <a href="RESUME.pdf"  target="_blank">RESUME</a>
 			<br>
-		<a href="https://www.linkedin.com/in/pbomar"  target="blank">LINKEDIN</a>
-		<a href="https://www.instagram.com/parkerbomar"  target="blank">INSTAGRAM</a>
+		<a href="https://www.linkedin.com/in/pbomar"  target="_blank">LINKEDIN</a>
+		<a href="https://www.instagram.com/parkerbomar"  target="_blank">INSTAGRAM</a>
 </div>
 
 
@@ -57,17 +57,17 @@ function closeNav() {
   <ul>
 	  <li><a class="current">ABOUT</a></li>  
 	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf"  target="blank">RESUME</a></li>
+	<li> <a href="RESUME.pdf"  target="_blank">RESUME</a></li>
 	
   </ul>
 	  <br>
 	
 	<div id="social">
 		
-		<a href="https://www.instagram.com/parkerbomar" target="blank"><img src="assets/insta.png" width="44" height="44" alt="@parkerbomar - Instagram" align = "center"/></a>
-		<a href="https://www.behance.net/parkerbomar" target="blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
-		<a href="https://dribbble.com/parkerbomar" target="blank"><img src="assets/dribble.png" width="42" height="42" alt="behance" align = "center"/></a>
-		<a href="https://www.linkedin.com/in/pbomar" target="blank"><img src="assets/linkedin.png" width="42" height="42" alt="Linked-in" align = "center"/></a>
+		<a href="https://www.instagram.com/parkerbomar" target="_blank"><img src="assets/insta.png" width="44" height="44" alt="@parkerbomar - Instagram" align = "center"/></a>
+		<a href="https://www.behance.net/parkerbomar" target="_blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
+		<a href="https://dribbble.com/parkerbomar" target="_blank"><img src="assets/dribble.png" width="42" height="42" alt="behance" align = "center"/></a>
+		<a href="https://www.linkedin.com/in/pbomar" target="_blank"><img src="assets/linkedin.png" width="42" height="42" alt="Linked-in" align = "center"/></a>
 	</div>
 
 	
