more mobile changes

--- a/Fitlock.html
+++ b/Fitlock.html
@@ -23,8 +23,10 @@
 </div>
 
 
+<div class="openbtn">
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-
+		</div>
+	
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
