--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,8 +23,10 @@
 </div>
 
 
+<div class="openbtn">
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-
+		</div>
+	
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
@@ -83,7 +85,7 @@ function closeNav() {
 		<a href="Fitlock.html">
 			<div class="hero1-image">
  			 <div class="hero1-text">
-	  		<img src="assets/fitlocklogo.png" width="100"  alt=""/>
+	  		<img src="assets/fitlocklogo.png" width="130"  alt=""/>
 			<h1 style="font-size:50px">FITLOCK</h1>
    			 <p>Prototype - PDF - Presentation</p>
 				</div> </div> </div> </a>
