--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 		<a href="https://www.instagram.com/parkerbomar"  target="_blank">INSTAGRAM</a>
 </div>
 
-
+<div class="openbtn">
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-
+		</div>
+	
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
