--- a/Logo.html
+++ b/Logo.html
@@ -22,9 +22,10 @@
 		<a href="https://www.instagram.com/parkerbomar" target="_blank">INSTAGRAM</a>
 </div>
 
-
+<div class="openbtn">
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-
+		</div>
+	
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
@@ -59,7 +60,7 @@ function closeNav() {
 	  <li><a href="index.html">ABOUT</a></li>  
 	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
 	<li> <a href="RESUME.pdf"  target="_blank">RESUME</a></li>
-	<li> <a  class="current">LOGO DESIGN</a></li>
+	<li> <a  class="current">LOGO DESIGN </a></li>
   </ul>
 	  <br>
 	
@@ -81,7 +82,7 @@ function closeNav() {
 		
 		<div class="hero2-image">
   <div class="hero2-text">
-     <img src="assets/PBlogo1.png" width="100" alt=""/>
+     <img src="assets/PBlogo1.png" width="90" alt=""/>
 			<h1 style="font-size:50px">Logo Design</h1>
     		<p>Low to High Fidelity</p>
 				
