--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,6 +14,8 @@
 	<div class="sidesideside">  
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+				<h1><img src="assets/PBlogo.png" width="100" style="text-align: center; display: block; margin: auto; "alt=""/></h1>
+
 <a href="index.html">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
 	 <a href="RESUME.pdf"  target="_blank">RESUME</a>
