--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<div class="sidesideside">  
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn disabled" onclick="closeNav()">&times;</a>
+				<h1><img src="assets/PBlogo.png" width="100" style="text-align: center; display: block; margin: auto; "alt=""/></h1>
+
 <a class="current">ABOUT</a>
 	 <a href="Portfolio.html">PORTFOLIO</a>
 	 <a href="RESUME.pdf"  target="_blank">RESUME</a>
