text align right column

--- a/Fitlock.html
+++ b/Fitlock.html
@@ -119,7 +119,7 @@ function closeNav() {
 			</p>
 			</p>
 		  </div>
-		<div id="columnRight">
+		<div id="columnRight" style="text-align: center;">
 			
 		
 		  <div id="files">
