--- a/Logo.html
+++ b/Logo.html
@@ -110,7 +110,8 @@ function closeNav() {
 		  <p><img src="assets/pb.gif" width="558" height="324" alt=""/></p><br>
 			
 		</div>
-		<div id="columnRight">
+				<div id="columnRight" style="text-align: center;">
+
 		  <h2>Low Fidelity</h2>
 		  <p><img src="assets/pb-low.png" width="106" height="109" alt=""/></p>
 		  <h2>Medium Fidelity</h2>
