fixed W3.CSS overriding a couple CSS styles

--- a/VBredesign/menu.html
+++ b/VBredesign/menu.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Village Burger - Menu</title>
+	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="stylesheets/Menu_style.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	
+	</head>
 
 <body>
 	
@@ -15,7 +17,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><a class="image" href="index.html"><img src="assets/VBlogo.png" width="60" height="" alt=""/></a></li>	
+<li><a class="imageer" href="index.html"><img src="assets/VBlogo.png" width="60" height="" alt=""/></a></li>	
   <li><a class="active" href="menu.html">Menu</a></li>
   <li><a  href="locations.html">Locations</a></li>
   <li><a  href="about.html">About</a></li>
