--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ function closeNav() {
 				<h3>Skills</h3>
 				<ul>
 					<li>Interactive Design</li>
-				
+				<li>Useablity Testing</li>
+<li>UI/UX</li>
 					<li>Adult Learning</li>
 					<li>Training</li>
 						<li>Sales</li>
@@ -125,6 +126,7 @@ function closeNav() {
 					<li>Lightroom</li>
 					<li>Illustrator</li>
 						<li>AutoCad</li>
+					<li>Axure RP</li>
 					</ul>
 					
 					<br>
