--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ function closeNav() {
 				<h3>Skills</h3>
 				<ul>
 					<li>Interactive Design</li>
-				<li>Useablity Testing</li>
+				<li>Usability Testing</li>
 <li>UI/UX</li>
 					<li>Adult Learning</li>
 					<li>Training</li>
