--- a/Portfolio.html
+++ b/Portfolio.html
@@ -102,10 +102,9 @@ function closeNav() {
    			</div> </div> </div></a>
 		
 		<div id="hoverimg5">
-		<a href="VBredesign/index.html" target="blank">
+		<a href="projects.html" target="blank">
 			<div class="hero5-image">
   			<div class="hero5-text">
-				
 			<h1 style="font-size:50px">Ongoing Projects</h1>
     		<p>Various ongoing projects</p>
 				</div> </div> </div> </a>
