--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Parker Bomar - Logo</title>
+<title>Parker Bomar - Project</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="projectsstyle.css" rel="stylesheet" type="text/css">
 </head>
