--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
 <title>Parker Bomar - 404</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
-<link href="404.css" rel="stylesheet" type="text/css">
+<link href="Stylesheets/404.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
