--- a/Portfolio.html
+++ b/Portfolio.html
@@ -6,7 +6,7 @@
 
 <title>Parker Bomar - Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<link href="Stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
