--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Parker Bomar - About Me</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
-<link href="stylesheet.css" rel="stylesheet" type="text/css">
+<link href="Stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
