--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 
 <title>Parker Bomar - Project</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
-<link href="projectsstyle.css" rel="stylesheet" type="text/css">
+<link href="Stylesheets/projectsstyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -117,7 +117,7 @@ function closeNav() {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
+    <a target="_blank" href="UI.html">
       <img src="assets/uistencil.jpg" alt="UI" width="600" height="400">
     </a>
     <div class="desc">UI Stencil for laser cutting</div>
@@ -126,7 +126,7 @@ function closeNav() {
 
 <div class="responsive">
   <div class="gallery">
-   
+   <a target="_blank" href="infotainment.html">
       <img src="assets/road.jpg" alt="automotive" width="600" height="400">
     </a>
     <div class="desc">Ongoing - auto infotainment study</div>
