--- a/projects.html
+++ b/projects.html
@@ -120,7 +120,7 @@ function closeNav() {
     <a target="_blank" href="UI.html">
       <img src="assets/uistencil.jpg" alt="UI" width="600" height="400">
     </a>
-    <div class="desc">UI Stencil for laser cutting</div>
+    <div class="desc">Laser cut UI Stencil</div>
   </div>
 </div>
 
@@ -129,7 +129,7 @@ function closeNav() {
    <a target="_blank" href="infotainment.html">
       <img src="assets/road.jpg" alt="automotive" width="600" height="400">
     </a>
-    <div class="desc">Ongoing - auto infotainment study</div>
+    <div class="desc">Ongoing - Auto infotainment study</div>
   </div>
 </div>
 
