--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,14 @@
 <head>
 <meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-
+<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
 <title>Parker Bomar - Portfolio</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="Stylesheets/stylesheet.css" rel="stylesheet" type="text/css">
