--- a/projects.html
+++ b/projects.html
@@ -4,12 +4,21 @@
 <meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
+	
 <title>Parker Bomar - Project</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="Stylesheets/projectsstyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+	<!-- Side nav -->
 	
 	<div class="sidesideside">  
 	<div id="mySidenav" class="sidenav">
@@ -43,6 +52,8 @@ function closeNav() {
 </script>
 	
 		</div>
+	
+		<!-- Side nav end -->
 	<div id="shell">
 		
 
