--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@ function closeNav() {
 	  <div id="maincontent">
 		
 		<h2>Projects</h2>
-<h4>Here are a few of ongoing projects or things I have worked on over the past few semesters.</h4>
+<h4>Here are a few ongoing projects and designs I have worked on over the past few semesters.</h4>
 
 <div class="responsive">
   <div class="gallery">
@@ -122,7 +122,7 @@ function closeNav() {
     <a target="_blank" href="https://www.dropbox.com/s/pxqmciedr4zy37q/project%201%20airkoryo.pdf?dl=0">
       <img src="assets/airkoryo.jpg" alt="Air Koryo" width="600" height="400">
     </a>
-    <div class="desc">High fidelity Air Koryo mobile app</div>
+    <div class="desc">High fidelity Air Koryo redesign</div>
   </div>
 </div>
 
@@ -131,7 +131,7 @@ function closeNav() {
     <a target="_blank" href="UI.html">
       <img src="assets/uistencil.jpg" alt="UI" width="600" height="400">
     </a>
-    <div class="desc">Laser cut UI Stencil</div>
+    <div class="desc">Laser cut UI stencil</div>
   </div>
 </div>
 
@@ -147,8 +147,8 @@ function closeNav() {
 <div class="clearfix"></div>
 
 <div style="padding:6px;">
-	 <p>This is a combonation of personal projects, major class assignments and hobbies.  </p>
-  <p>I will be adding more to this site as time comes up. send me an email and I will be happy to explain and show any of these in more detail. </p>
+	 <p>This is a combination of personal projects, major class assignments and hobbies.  </p>
+  <p>I will be adding more to this site as time comes up. Send me an email and I will be happy to explain and show any of these in more detail. </p>
 	
 </div>
 		  
