--- a/projects.html
+++ b/projects.html
@@ -140,7 +140,7 @@ function closeNav() {
    <a target="_blank" href="infotainment.html">
       <img src="assets/road.jpg" alt="automotive" width="600" height="400">
     </a>
-    <div class="desc">Ongoing - Auto infotainment study</div>
+    <div class="desc">Ongoing - Autonomous driving UI/UX study</div>
   </div>
 </div>
 
