--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@ function closeNav() {
     <a target="_blank" href="https://www.dropbox.com/s/9v6zsr9odctsrv7/Corsair%20Logo%20Parker%20Bomar.pdf?dl=0">
       <img src="assets/corsair.png" alt="Corsair" width="600" height="400">
     </a>
-    <div class="desc">Corsair Marine logo Redesign pitch</div>
+    <div class="desc">Rebranding - logo & pitch</div>
   </div>
 </div>
 
@@ -122,7 +122,7 @@ function closeNav() {
     <a target="_blank" href="https://www.dropbox.com/s/pxqmciedr4zy37q/project%201%20airkoryo.pdf?dl=0">
       <img src="assets/airkoryo.jpg" alt="Air Koryo" width="600" height="400">
     </a>
-    <div class="desc">High fidelity Air Koryo redesign</div>
+    <div class="desc">UI/UX - Air Koryo app and testing</div>
   </div>
 </div>
 
@@ -131,7 +131,7 @@ function closeNav() {
     <a target="_blank" href="UI.html">
       <img src="assets/uistencil.jpg" alt="UI" width="600" height="400">
     </a>
-    <div class="desc">Laser cut UI stencil</div>
+    <div class="desc">Digital Fab - Laser cut UI stencil</div>
   </div>
 </div>
 
@@ -140,7 +140,48 @@ function closeNav() {
    <a target="_blank" href="infotainment.html">
       <img src="assets/road.jpg" alt="automotive" width="600" height="400">
     </a>
-    <div class="desc">Ongoing - Autonomous driving UI/UX study</div>
+    <div class="desc">Senior study - Autonomous driving UI/UX </div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+		  
+		  
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.dropbox.com/s/pr6n1sv5qsd4hs2/Parker%20Bomar%202170%20Final.key?dl=0">
+      <img src="assets/tesla.jpg" alt="tesla" width="600" height="400">
+    </a>
+    <div class="desc">Pitch - Human Centered Design & Tesla</div>
+  </div>
+</div>
+
+
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.dropbox.com/s/2f38se90bn7apnc/Assignment%202.pptx?dl=0">
+      <img src="assets/olympics.jpg" alt="olypics" width="600" height="400">
+    </a>
+    <div class="desc">Prototyping - Olympics app </div>
+  </div>
+</div>
+		  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="kayak.html">
+      <img src="assets/kayak.jpg" alt="Air Koryo" width="600" height="400">
+    </a>
+    <div class="desc">digital Fab - 3d printing Kayak H Channel</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+  <div class="gallery">
+   <a target="_blank" href="ethno.html">
+      <img src="assets/bridge.jpg" alt="ethno" width="600" height="400">
+    </a>
+    <div class="desc">Ethnogrophy - Architecture students</div>
   </div>
 </div>
 
