--- a/ethno.html
+++ b/ethno.html
@@ -109,7 +109,7 @@ function closeNav() {
 			  <h3>Files</h3>
 		  <div id="files">
 			
-			  <h4><a href="https://www.dropbox.com/s/khxydrfpn6pjj4x/Fitlock%20PDF3.pdf?dl=0" target="blank">Report PDF</a></h4> 
+			  <h4><a href="https://www.dropbox.com/s/3zbcf874lhjihwi/Building%20an%20ethnogrophy.pdf?dl=0" target="blank">Report PDF</a></h4> 
 			
 			<h4><a href="https://www.dropbox.com/s/i00v1oj8g9hk2tb/Ethnography%20Presentation.key?dl=0" title="1st Presentation" target="_blank">Presentation</a></h4>
 			
