--- a/ethno.html
+++ b/ethno.html
@@ -173,6 +173,13 @@ function closeNav() {
 		  <p>Strictly talking about productivity, most seem to agree that software and productivity tools are vital for keeping up with the demands of today’s clients, so long as what is being asked of them to digitally create does not exceed their knowledge of the software they are using. The learning curve of a program and complexity of a project is what really seems to affect whether architects, both students and professionals, think productivity tools help or hinder their productivity. It became clear during our observations that most designs consisting of complex shapes and forms would take days, or weeks, to complete with hand tools. Despite the annoyance of the learning curve most interviewees seemed to focus on, their reliance on productivity tools was obvious. </p>
 		  <p>Our study revealed that “productivity tools” meant using everything at one’s disposal, be it sketching, modeling, software, or laser cutters, to complete a design with as much quality, and in as little time, as possible. The hand skills that laid the foundation for architecture today are utilized and supplemented by the new technology constantly introduced into the field, each one growing in its usefulness and necessity. To limit oneself to strictly use one modality is to limit one’s success in the field. A successful student demonstrates confidence in utilizing their skills in both sketching and productivity tools.They’ve built an unshakable foundation of abilities at the ready for whatever they may encounter. And if anyone can appreciate a strong foundation, it’s an architect. <br>
 	      </p>
+			
+			
+			<div id="colorblock">
+			
+				<p><h2><p><img src="assets/archdraw.jpg" width="70%" alt=""/> </p></h2>
+		  </div>
+			
 		</div>
 				
 			
