portfolio page update

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -108,13 +108,13 @@ function closeNav() {
    			 <p>Prototype - PDF - Presentation</p>
 				</div> </div> </div> </a>
 				
-				<div id="hoverimg1">
-		<a href="Logo.html">
-			<div class="hero2-image">
-  			<div class="hero2-text">
-	 		 <img src="assets/PBlogo1.png" width="100" alt=""/>
-			<h1 style="font-size:50px">Logo Design</h1>
-    		<p>Low to High Fidelity</p>
+				<div id="hoverimg6">
+		<a href="ethno.html">
+			<div class="hero6-image">
+  			<div class="hero6-text">
+	 
+			<h1 style="font-size:50px">Ethnography</h1>
+    		<p>What does productivity mean to architects?</p>
    			</div> </div> </div></a>
 		
 		
@@ -127,7 +127,17 @@ function closeNav() {
 			<h1 style="font-size:50px">Village Burger</h1>
     		<p>Website and Brand Redesign</p>
 				</div> </div> </div> </a>
+	
 		
+			<div id="hoverimg1">
+		<a href="Logo.html">
+			<div class="hero2-image">
+  			<div class="hero2-text">
+	 		 <img src="assets/PBlogo1.png" width="100" alt=""/>
+			<h1 style="font-size:50px">Logo Design</h1>
+    		<p>Low to High Fidelity</p>
+   			</div> </div> </div></a>
+			
 		<div id="hoverimg2">
 		<a href="https://www.instagram.com/parkerbomar" target="blank">
 			<div class="hero3-image">
