--- a/Frontend2/index.html
+++ b/Frontend2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<title>Village Burger</title>
+<title>Parker Bomar</title>
 <link href="stylesheets/index_style.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
