--- a/Frontend2/index.html
+++ b/Frontend2/index.html
@@ -15,12 +15,12 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><a class="image" href="pbomar.com"><img src="assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
-  <li><a href="=pbomar.com/portfolio.html">Portfolio</a></li>
-  <li><a href="linkedin.com/in/pbomar">Linked in</a></li>
-  <li><a href="dribbble.com/parkerbomar">Dribbble</a></li>
+<li><a class="image" href="https://www.pbomar.com"><img src="assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
+  <li><a href="https://www.pbomar.com/portfolio.html">Portfolio</a></li>
+  <li><a href="https://www.linkedin.com/in/pbomar">Linked in</a></li>
+  <li><a href="https://www.dribbble.com/parkerbomar">Dribbble</a></li>
   	
-	  <li><a href="pbomar.com/resume.pdf" target="_blank"><button class="button">Resume</button></a></li>
+	  <li><a href="https://www.pbomar.com/resume.pdf" target="_blank"><button class="button">Resume</button></a></li>
 		
 </ul>
 	
