--- a/Frontend2/index.html
+++ b/Frontend2/index.html
@@ -16,11 +16,11 @@
 	
 	<ul>	
 <li><a class="image" href="https://www.pbomar.com"><img src="assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
-  <li><a href="https://www.pbomar.com/portfolio.html">Portfolio</a></li>
+  <li><a href="https://www.pbomar.com/Portfolio.html">Portfolio</a></li>
   <li><a href="https://www.linkedin.com/in/pbomar">Linked in</a></li>
   <li><a href="https://www.dribbble.com/parkerbomar">Dribbble</a></li>
   	
-	  <li><a href="https://www.pbomar.com/resume.pdf" target="_blank"><button class="button">Resume</button></a></li>
+	  <li><a href="https://www.pbomar.com/RESUME.pdf" target="_blank"><button class="button">Resume</button></a></li>
 		
 </ul>
 	
